overflow fix

--- a/app/components/Header/style.css
+++ b/app/components/Header/style.css
@@ -32,8 +32,7 @@
   display: inline-block;
   position: absolute;
   top: 2em;
-  right: 3em;
-  overflow:hidden;
+  right: 3.8em;
 }
 
 .icon {
